[package]
name = "algorithm"
version = "0.1.0"
edition = "2021"
description = "This is my implementation of the algorithms and data structures from this book, Introduction to Algorithms - 3rd Edition, for learning purpose."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "~0.8"
